--- a/account-dashboard.html
+++ b/account-dashboard.html
@@ -4,13 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Accounting Dashboard - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
+        :root {
+            --bs-primary-rgb: 71, 121, 222;
+            --bs-success-rgb: 25, 185, 154;
+            --bs-warning-rgb: 255, 184, 34;
+            --bs-danger-rgb: 239, 72, 88;
+            --bs-info-rgb: 23, 162, 184;
+            --bs-dark-rgb: 33, 37, 41;
+            --bs-body-bg-rgb: 237, 242, 247;
+            --bs-body-color-rgb: 52, 71, 103;
+            --bs-font-sans-serif: 'Poppins', sans-serif;
+        }
+
         body {
-            background-color: #f8f9fa
+            background-color: rgb(var(--bs-body-bg-rgb));
+            font-family: var(--bs-font-sans-serif);
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 90px 30px 30px 30px;
         }
 
         .sidebar {
@@ -20,74 +40,101 @@
             bottom: 0;
             width: 250px;
             padding: 70px 0 0;
-            background-color: #f8f9fa;
-            color: #212529;
+            background-color: #fff;
             height: 100vh;
             overflow-y: auto;
             border-right: 1px solid #dee2e6;
+            z-index: 1000;
         }
 
         .sidebar .nav-link {
-            color: #212529;
-            padding: 10px 20px
+            color: #344767;
+            padding: 12px 20px;
+            font-weight: 500;
+            font-size: 0.9rem;
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #0d6efd;
-            background-color: #e9ecef
+            background-color: #e9ecef;
+            border-radius: 0.375rem;
+            margin: 0 1rem;
+            padding: 12px;
         }
 
-        .sidebar .nav-link .fa {
+        .sidebar .nav-link.active {
+            color: white;
+            background-color: rgb(var(--bs-primary-rgb));
+        }
+
+        .sidebar .nav-link .fa-fw {
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 12px;
+            font-size: 1rem;
         }
 
         .nav-sub-link {
-            margin-left: 50px;
+            padding-left: 52px !important;
+            font-size: 0.85em !important;
+            font-weight: 400 !important;
+            background-color: transparent !important;
         }
 
-        .main-content {
-            margin-left: 250px;
-            padding: 90px 20px 20px;
+        .nav-sub-link:hover,
+        .nav-sub-link.active {
+            color: rgb(var(--bs-primary-rgb)) !important;
         }
 
-        .navbar {
-            z-index: 1030
+        .nav-sub-link.active {
+            font-weight: 600 !important;
         }
 
-        .navbar-brand {
-            font-weight: 700
+        h1,
+        .h1,
+        h2,
+        .h2,
+        h3,
+        .h3 {
+            font-weight: 600;
+            color: #344767;
         }
 
         .card {
-            border-radius: .375rem;
+            border: none;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1);
         }
 
-        .stock-in {
-            color: #198754;
+        .card-header {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+            font-weight: 600;
         }
 
-        .stock-out {
-            color: #dc3545;
+        .stat-card-title {
+            font-size: 0.875rem;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .stat-card-value {
+            font-size: 1.75rem;
+            font-weight: 700;
         }
     </style>
 </head>
 
 <body>
-    <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
+        <div class="container-fluid"><a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
             <div class="ms-auto d-flex align-items-center">
-                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div>
-                <a href="index.html" class="btn btn-outline-light btn-sm"><i
-                        class="fa fa-sign-out-alt me-1"></i>Logout</a>
+                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div><a href="index.html"
+                    class="btn btn-outline-light btn-sm"><i class="fa fa-sign-out-alt me-1"></i>Logout</a>
             </div>
         </div>
     </nav>
-
 
 
     <!-- Sidebar -->
@@ -184,69 +231,111 @@
         </nav>
     </div>
 
-
-    <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
-            </div>
-            <div class="card animate__animated animate__fadeInUp">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
+                <div>
+                    <h1 class="h3 mb-0">Accounting Dashboard</h1>
+                    <p class="mb-0 text-muted">Your business's financial snapshot.</p>
                 </div>
-                <div class="card-body">
+                <div class="d-flex gap-2">
+                    <a href="journal-entry.html" class="btn btn-primary"><i class="fa fa-plus-circle me-1"></i> New
+                        Journal Entry</a>
+                    <a href="general-ledger.html" class="btn btn-outline-secondary"><i class="fa fa-book me-1"></i> View
+                        Ledgers</a>
+                </div>
+            </div>
+            <div class="row g-4 mb-4">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card card-body text-success">
+                        <div class="stat-card-title">Cash & Bank Balance</div>
+                        <div class="stat-card-value">৳ 5.2M</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card card-body text-warning">
+                        <div class="stat-card-title">Total Receivables</div>
+                        <div class="stat-card-value">৳ 3.6M</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card card-body text-danger">
+                        <div class="stat-card-title">Total Payables</div>
+                        <div class="stat-card-value">৳ 1.8M</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card card-body text-primary">
+                        <div class="stat-card-title">Net Profit (YTD)</div>
+                        <div class="stat-card-value">৳ 8.5M</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-4 mb-4">
+                <div class="col-lg-7">
+                    <div class="card h-100">
+                        <div class="card-header"><i class="fa fa-chart-bar me-2"></i>Monthly Cash Flow</div>
+                        <div class="card-body"><canvas id="cashFlowChart"></canvas></div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="card h-100">
+                        <div class="card-header"><i class="fa fa-chart-pie me-2"></i>Expense Breakdown (This Month)
+                        </div>
+                        <div class="card-body d-flex align-items-center justify-content-center"><canvas
+                                id="expenseChart" style="max-height: 300px;"></canvas></div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header"><i class="fa fa-history me-2"></i>Recent Financial Transactions</div>
+                <div class="card-body p-0">
                     <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead class="table-light">
+                        <table class="table table-hover mb-0">
+                            <thead>
                                 <tr>
                                     <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
+                                    <th>Account</th>
+                                    <th>Description</th>
+                                    <th class="text-end">Debit</th>
+                                    <th class="text-end">Credit</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
+                                    <td>07-Mar-25</td>
+                                    <td>Profit Distribution</td>
+                                    <td>Paid to Director, MD. Iqbal</td>
+                                    <td class="text-end text-danger">৳ 20,000</td>
                                     <td class="text-end"></td>
-                                    <td class="text-end">150</td>
                                 </tr>
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
+                                    <td>07-Mar-25</td>
+                                    <td>Cash</td>
+                                    <td>Received from Salma Akter (Inv #1561)</td>
+                                    <td class="text-end text-success">৳ 4,000</td>
                                     <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
                                 </tr>
                                 <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
+                                    <td>06-Mar-25</td>
+                                    <td>Rent Expense</td>
+                                    <td>Monthly Rent Payment</td>
+                                    <td class="text-end text-danger">৳ 19,000</td>
                                     <td class="text-end"></td>
-                                    <td class="text-end">210</td>
                                 </tr>
                                 <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
+                                    <td>04-Mar-25</td>
+                                    <td>Bank Account</td>
+                                    <td>Cash Deposit</td>
+                                    <td class="text-end text-success">৳ 200,000</td>
                                     <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
+                                </tr>
+                                <tr>
+                                    <td>03-Mar-25</td>
+                                    <td>Accounts Receivable</td>
+                                    <td>Sale to Rana (Inv #6084)</td>
+                                    <td class="text-end text-success">৳ 12,500</td>
+                                    <td class="text-end"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -256,6 +345,8 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>const cashFlowCtx = document.getElementById("cashFlowChart").getContext("2d"); new Chart(cashFlowCtx, { type: "bar", data: { labels: ["Nov", "Dec", "Jan", "Feb", "Mar"], datasets: [{ label: "Cash In", data: [7e6, 9e6, 85e5, 12e6, 1e7], backgroundColor: "rgba(25, 185, 154, 0.7)" }, { label: "Cash Out", data: [6e6, 75e5, 7e6, 9e6, 8e6], backgroundColor: "rgba(239, 72, 88, 0.7)" }] }, options: { responsive: !0, maintainAspectRatio: !1, scales: { y: { beginAtZero: !0, ticks: { callback: t => "\u09f3" + t / 1e6 + "M" } } } } }); const expenseCtx = document.getElementById("expenseChart").getContext("2d"); new Chart(expenseCtx, { type: "doughnut", data: { labels: ["Rent", "Salaries", "Utilities", "Marketing", "Maintenance"], datasets: [{ data: [19e3, 15e4, 25e3, 3e4, 15e3], backgroundColor: ["#ef4858", "#4779de", "#ffb822", "#19b99a", "#6c757d"] }] }, options: { responsive: !0, maintainAspectRatio: !1 } });</script>
 </body>
 
 </html>
