--- a/voucher_form.html
+++ b/voucher_form.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Voucher Form - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
-            background-color: #f8f9fa
+            background-color: #f8f9fa;
         }
 
         .sidebar {
@@ -29,19 +28,19 @@
 
         .sidebar .nav-link {
             color: #212529;
-            padding: 10px 20px
+            padding: 10px 20px;
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #0d6efd;
-            background-color: #e9ecef
+            background-color: #e9ecef;
         }
 
         .sidebar .nav-link .fa {
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 10px;
         }
 
         .nav-sub-link {
@@ -54,23 +53,15 @@
         }
 
         .navbar {
-            z-index: 1030
+            z-index: 1030;
         }
 
         .navbar-brand {
-            font-weight: 700
+            font-weight: 700;
         }
 
         .card {
             border-radius: .375rem;
-        }
-
-        .stock-in {
-            color: #198754;
-        }
-
-        .stock-out {
-            color: #dc3545;
         }
     </style>
 </head>
@@ -87,7 +78,6 @@
             </div>
         </div>
     </nav>
-
 
 
     <!-- Sidebar -->
@@ -184,78 +174,73 @@
         </nav>
     </div>
 
-
     <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
-            </div>
-            <div class="card animate__animated animate__fadeInUp">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
-                </div>
+            <h1 class="h3 mb-4" id="formTitle">Create New Voucher</h1>
+            <div class="card">
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead class="table-light">
-                                <tr>
-                                    <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
-                                </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    <form id="voucherForm">
+                        <div class="row">
+                            <div class="col-md-4 mb-3">
+                                <label for="voucherType" class="form-label">Voucher Type*</label>
+                                <select class="form-select" id="voucherType" required>
+                                    <option value="payment">Payment</option>
+                                    <option value="receipt">Receipt</option>
+                                    <option value="journal">Journal</option>
+                                    <option value="contra">Contra</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="voucherDate" class="form-label">Date*</label>
+                                <input type="date" class="form-control" id="voucherDate" required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label for="voucherNumber" class="form-label">Voucher #</label>
+                                <input type="text" class="form-control" id="voucherNumber" placeholder="Auto-generated"
+                                    readonly>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="payeeName" class="form-label">Payee / Payer Name*</label>
+                            <input type="text" class="form-control" id="payeeName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="voucherDetails" class="form-label">Particulars / Details*</label>
+                            <textarea class="form-control" id="voucherDetails" rows="4" required
+                                placeholder="Describe the transaction..."></textarea>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 mb-3">
+                                <label for="amount" class="form-label">Amount*</label>
+                                <div class="input-group">
+                                    <span class="input-group-text">৳</span>
+                                    <input type="number" class="form-control" id="amount" required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mt-3">
+                            <button type="submit" class="btn btn-primary">Save Voucher</button>
+                            <a href="voucher_list.html" class="btn btn-secondary">Cancel</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Simple script to change title if an ID is present in URL (for editing)
+        document.addEventListener('DOMContentLoaded', function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.has('id')) {
+                document.getElementById('formTitle').textContent = 'Edit Voucher';
+                // You would typically fetch and populate form data here
+            }
+        });
+    </script>
 </body>
 
 </html>
