--- a/all-create.html
+++ b/all-create.html
@@ -117,7 +117,11 @@
             </div>
         </div>
     </nav>
-<div class="sidebar">
+
+
+    <!-- Sidebar -->
+
+    <div class="sidebar">
         <nav class="nav flex-column">
             <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
             <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
@@ -135,6 +139,7 @@
             </a>
             <div class="collapse show" id="inventoryCollapse">
                 <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="inventory-dashboard.html">Inventory Dashboard</a>
                     <a class="nav-link nav-sub-link" href="inventory-products.html">Product List</a>
                     <a class="nav-link nav-sub-link" href="items-manage.html">Item Categories</a>
                     <a class="nav-link nav-sub-link" href="brands-manage.html">Brands</a>
@@ -146,6 +151,7 @@
             </a>
             <div class="collapse show" id="purchasesCollapse">
                 <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="purchase-dashboard.html">Purchase Dashboard</a>
                     <a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a>
                     <a class="nav-link nav-sub-link" href="#">Purchase List</a>
                 </nav>
@@ -156,6 +162,7 @@
             </a>
             <div class="collapse show" id="salesCollapse">
                 <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="sales-dashboard.html">Sales Dashboard</a>
                     <a class="nav-link nav-sub-link" href="sales-create.html">New Invoice</a>
                     <a class="nav-link nav-sub-link" href="sales-manage-invoices.html">Invoice List</a>
                     <a class="nav-link nav-sub-link" href="sales-return-create.html">Process Return</a>
@@ -170,22 +177,41 @@
                 </nav>
             </div>
             <!-- New Collection Links -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#collectionsCollapse" role="button" aria-expanded="true"><i class="fa fa-hand-holding-dollar fa-fw"></i> Collections <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="collectionsCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="emi-collection.html">EMI Collection</a><a class="nav-link nav-sub-link" href="due-collection.html">Due Collection</a><a class="nav-link nav-sub-link" href="customer-ledger.html">Customer Ledger</a></nav></div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#collectionsCollapse" role="button"
+                aria-expanded="true"><i class="fa fa-hand-holding-dollar fa-fw"></i> Collections <i
+                    class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
+            <div class="collapse show" id="collectionsCollapse">
+                <nav class="nav flex-column"><a class="nav-link nav-sub-link" href="emi-collection.html">EMI
+                        Collection</a><a class="nav-link nav-sub-link" href="due-collection.html">Due Collection</a><a
+                        class="nav-link nav-sub-link" href="customer-ledger.html">Customer Ledger</a></nav>
+            </div>
             <a class="nav-link" data-bs-toggle="collapse" href="#reportsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-chart-pie fa-fw"></i> Reports <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
             </a>
             <div class="collapse show" id="reportsCollapse">
                 <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="stock-dashboard.html">Stock Dashboard</a>
                     <a class="nav-link nav-sub-link" href="reports-sales.html">Sales Report</a>
                     <a class="nav-link nav-sub-link" href="reports-stock-ledger.html">Stock Ledger</a>
                     <a class="nav-link nav-sub-link" href="reports-customer-dues.html">Customer Dues</a>
                 </nav>
             </div>
+
+            <a class="nav-link" data-bs-toggle="collapse" href="#accountingCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-chart-pie fa-fw"></i> Accounts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="accountingCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="voucher_form.html">Voucher Posting</a>
+                    <a class="nav-link nav-sub-link" href="voucher-list.html">Voucher List</a><a
+                        class="nav-link nav-sub-link" href="trial-balance.html">Trial Balance</a>
+                </nav>
+            </div>
+
+
             <a class="nav-link" href="settings.html"><i class="fa fa-cog fa-fw"></i> Settings</a>
         </nav>
     </div>
-
     <!-- MAIN CONTENT AREA -->
     <main class="main-content">
         <div class="container-fluid">
@@ -210,7 +236,8 @@
                 <div class="card-body">
                     <div class="tab-content" id="myTabContent">
                         <!-- Customer & Supplier Forms (remain the same) -->
-                        <div class="tab-pane fade show active p-3 animate__animated animate__fadeInUp" id="customer-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade show active p-3 animate__animated animate__fadeInUp"
+                            id="customer-tab-pane" role="tabpanel">
                             <form id="customerForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Customer Name*</label><input
@@ -224,7 +251,8 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="supplier-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="supplier-tab-pane"
+                            role="tabpanel">
                             <form id="supplierForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Supplier Name*</label><input
@@ -239,7 +267,8 @@
                             </form>
                         </div>
                         <!-- Product Form (UPDATED) -->
-                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="product-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="product-tab-pane"
+                            role="tabpanel">
                             <form id="productForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Product Model/Name*</label><input
@@ -268,13 +297,15 @@
                             </form>
                         </div>
                         <!-- Category & Brand Forms (remain the same) -->
-                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="category-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="category-tab-pane"
+                            role="tabpanel">
                             <form id="categoryForm" class="d-flex" style="max-width: 500px;"><input type="text"
                                     class="form-control me-2" name="name"
                                     placeholder="Enter new category name (e.g., Television)" required><button
                                     type="submit" class="btn btn-primary">Save</button></form>
                         </div>
-                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="brand-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="brand-tab-pane"
+                            role="tabpanel">
                             <form id="brandForm" class="d-flex" style="max-width: 500px;"><input type="text"
                                     class="form-control me-2" name="name"
                                     placeholder="Enter new brand name (e.g., Walton)" required><button type="submit"
