--- a/general-ledger.html
+++ b/general-ledger.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>General Ledger - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
+        :root {
+            --bs-primary-rgb: 71, 121, 222;
+            --bs-body-bg-rgb: 237, 242, 247;
+            --bs-body-color-rgb: 52, 71, 103;
+            --bs-font-sans-serif: 'Poppins', sans-serif;
+        }
+
         body {
-            background-color: #f8f9fa
+            background-color: rgb(var(--bs-body-bg-rgb));
+            font-family: var(--bs-font-sans-serif);
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 90px 30px 30px 30px;
         }
 
         .sidebar {
@@ -20,70 +35,87 @@
             bottom: 0;
             width: 250px;
             padding: 70px 0 0;
-            background-color: #f8f9fa;
-            color: #212529;
+            background-color: #fff;
             height: 100vh;
             overflow-y: auto;
             border-right: 1px solid #dee2e6;
+            z-index: 1000;
         }
 
         .sidebar .nav-link {
-            color: #212529;
-            padding: 10px 20px
+            color: #344767;
+            padding: 12px 20px;
+            font-weight: 500;
+            font-size: 0.9rem;
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #0d6efd;
-            background-color: #e9ecef
+            background-color: #e9ecef;
+            border-radius: 0.375rem;
+            margin: 0 1rem;
+            padding: 12px;
         }
 
-        .sidebar .nav-link .fa {
+        .sidebar .nav-link.active {
+            color: white;
+            background-color: rgb(var(--bs-primary-rgb));
+        }
+
+        .sidebar .nav-link .fa-fw {
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 12px;
+            font-size: 1rem;
         }
 
         .nav-sub-link {
-            margin-left: 50px;
+            padding-left: 52px !important;
+            font-size: 0.85em !important;
+            font-weight: 400 !important;
+            background-color: transparent !important;
         }
 
-        .main-content {
-            margin-left: 250px;
-            padding: 90px 20px 20px;
+        .nav-sub-link:hover,
+        .nav-sub-link.active {
+            color: rgb(var(--bs-primary-rgb)) !important;
         }
 
-        .navbar {
-            z-index: 1030
+        .nav-sub-link.active {
+            font-weight: 600 !important;
         }
 
-        .navbar-brand {
-            font-weight: 700
+        h1,
+        .h1,
+        .h2,
+        .h2,
+        .h3,
+        .h3 {
+            font-weight: 600;
+            color: #344767;
         }
 
         .card {
-            border-radius: .375rem;
+            border: none;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1);
         }
 
-        .stock-in {
-            color: #198754;
-        }
-
-        .stock-out {
-            color: #dc3545;
+        .card-header {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+            font-weight: 600;
         }
     </style>
 </head>
 
 <body>
-    <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
+        <div class="container-fluid"><a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
             <div class="ms-auto d-flex align-items-center">
-                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div>
-                <a href="index.html" class="btn btn-outline-light btn-sm"><i
-                        class="fa fa-sign-out-alt me-1"></i>Logout</a>
+                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div><a href="index.html"
+                    class="btn btn-outline-light btn-sm"><i class="fa fa-sign-out-alt me-1"></i>Logout</a>
             </div>
         </div>
     </nav>
@@ -185,70 +217,50 @@
     </div>
 
 
-    <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
-            </div>
-            <div class="card animate__animated animate__fadeInUp">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
-                </div>
+            <h1 class="h3 mb-4">General Ledger Report</h1>
+            <div class="card mb-4">
+                <div class="card-header"><i class="fa fa-filter me-2"></i>Report Filters</div>
                 <div class="card-body">
+                    <div class="row g-3 align-items-end">
+                        <div class="col-md-4"><label class="form-label">Account</label><select class="form-select"
+                                id="accountFilter">
+                                <option>Cash</option>
+                                <option>Accounts Receivable</option>
+                                <option>Rent Expense</option>
+                            </select></div>
+                        <div class="col-md-3"><label class="form-label">Start Date</label><input type="date"
+                                class="form-control" id="startDate"></div>
+                        <div class="col-md-3"><label class="form-label">End Date</label><input type="date"
+                                class="form-control" id="endDate"></div>
+                        <div class="col-md-2"><button class="btn btn-primary w-100" id="generateBtn">Generate</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card d-none" id="report-card">
+                <div class="card-header" id="report-header"></div>
+                <div class="card-body p-0">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-bordered table-hover mb-0">
                             <thead class="table-light">
                                 <tr>
                                     <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
+                                    <th>Particulars</th>
+                                    <th>Ref.</th>
+                                    <th class="text-end">Debit</th>
+                                    <th class="text-end">Credit</th>
                                     <th class="text-end">Balance</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="report-tbody"></tbody>
+                            <tfoot class="table-light">
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
+                                    <th colspan="5" class="text-end">Closing Balance:</th>
+                                    <th class="text-end fw-bold" id="closing-balance"></th>
                                 </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
-                                </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                     </div>
                 </div>
@@ -256,6 +268,9 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById("generateBtn").addEventListener("click", () => { const e = document.getElementById("accountFilter").value, t = { Cash: [{ date: "01-Mar-25", particulars: "Opening Balance", ref: "", debit: 5e6, credit: 0 }, { date: "03-Mar-25", particulars: "Payment from Salma Akter", ref: "INV-1561", debit: 4e3, credit: 0 }, { date: "04-Mar-25", particulars: "Deposited to Bank (Contra)", ref: "JE-0012", debit: 0, credit: 2e5 }, { date: "06-Mar-25", particulars: "Rent Payment", ref: "EXP-105", debit: 0, credit: 19e3 }], "Accounts Receivable": [{ date: "01-Mar-25", particulars: "Opening Balance", ref: "", debit: 32e5, credit: 0 }, { date: "03-Mar-25", particulars: "Sale to Rahim Store", ref: "INV-6080", debit: 35e3, credit: 0 }, { date: "03-Mar-25", particulars: "Payment Received from Salma Akter", ref: "INV-1561", debit: 0, credit: 4e3 }] }, n = t[e] || [], a = document.getElementById("report-tbody"); a.innerHTML = ""; let l = 0; n.forEach(e => { l = l + e.debit - e.credit; const t = `<tr><td>${e.date}</td><td>${e.particulars}</td><td>${e.ref}</td><td class="text-end">${e.debit > 0 ? `৳ ${e.debit.toLocaleString()}` : ""}</td><td class="text-end">${e.credit > 0 ? `৳ ${e.credit.toLocaleString()}` : ""}</td><td class="text-end">৳ ${l.toLocaleString()}</td></tr>`; a.innerHTML += t }), document.getElementById("report-header").innerText = `Ledger for: ${e}`, document.getElementById("closing-balance").innerText = `৳ ${l.toLocaleString()}`, document.getElementById("report-card").classList.remove("d-none") });
+    </script>
 </body>
 
 </html>
