--- a/journal-entry.html
+++ b/journal-entry.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Journal Entry - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
+        :root {
+            --bs-primary-rgb: 71, 121, 222;
+            --bs-body-bg-rgb: 237, 242, 247;
+            --bs-body-color-rgb: 52, 71, 103;
+            --bs-font-sans-serif: 'Poppins', sans-serif;
+        }
+
         body {
-            background-color: #f8f9fa
+            background-color: rgb(var(--bs-body-bg-rgb));
+            font-family: var(--bs-font-sans-serif);
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 90px 30px 30px 30px;
         }
 
         .sidebar {
@@ -20,70 +35,92 @@
             bottom: 0;
             width: 250px;
             padding: 70px 0 0;
-            background-color: #f8f9fa;
-            color: #212529;
+            background-color: #fff;
             height: 100vh;
             overflow-y: auto;
             border-right: 1px solid #dee2e6;
+            z-index: 1000;
         }
 
         .sidebar .nav-link {
-            color: #212529;
-            padding: 10px 20px
+            color: #344767;
+            padding: 12px 20px;
+            font-weight: 500;
+            font-size: 0.9rem;
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #0d6efd;
-            background-color: #e9ecef
+            background-color: #e9ecef;
+            border-radius: 0.375rem;
+            margin: 0 1rem;
+            padding: 12px;
         }
 
-        .sidebar .nav-link .fa {
+        .sidebar .nav-link.active {
+            color: white;
+            background-color: rgb(var(--bs-primary-rgb));
+        }
+
+        .sidebar .nav-link .fa-fw {
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 12px;
+            font-size: 1rem;
         }
 
         .nav-sub-link {
-            margin-left: 50px;
+            padding-left: 52px !important;
+            font-size: 0.85em !important;
+            font-weight: 400 !important;
+            background-color: transparent !important;
         }
 
-        .main-content {
-            margin-left: 250px;
-            padding: 90px 20px 20px;
+        .nav-sub-link:hover,
+        .nav-sub-link.active {
+            color: rgb(var(--bs-primary-rgb)) !important;
         }
 
-        .navbar {
-            z-index: 1030
+        .nav-sub-link.active {
+            font-weight: 600 !important;
         }
 
-        .navbar-brand {
-            font-weight: 700
+        h1,
+        .h1,
+        h2,
+        .h2,
+        h3,
+        .h3 {
+            font-weight: 600;
+            color: #344767;
         }
 
         .card {
-            border-radius: .375rem;
+            border: none;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1);
         }
 
-        .stock-in {
-            color: #198754;
+        .card-header {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+            font-weight: 600;
         }
 
-        .stock-out {
-            color: #dc3545;
+        .form-control-plaintext {
+            padding-left: .75rem;
+            padding-right: .75rem;
         }
     </style>
 </head>
 
 <body>
-    <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
+        <div class="container-fluid"><a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
             <div class="ms-auto d-flex align-items-center">
-                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div>
-                <a href="index.html" class="btn btn-outline-light btn-sm"><i
-                        class="fa fa-sign-out-alt me-1"></i>Logout</a>
+                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div><a href="index.html"
+                    class="btn btn-outline-light btn-sm"><i class="fa fa-sign-out-alt me-1"></i>Logout</a>
             </div>
         </div>
     </nav>
@@ -185,77 +222,56 @@
     </div>
 
 
-    <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
-            </div>
-            <div class="card animate__animated animate__fadeInUp">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
-                </div>
-                <div class="card-body">
+            <h1 class="h3 mb-4">Create Manual Journal Entry</h1>
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="row mb-4">
+                        <div class="col-md-3"><label class="form-label">Date</label><input type="date"
+                                class="form-control" id="journalDate"></div>
+                        <div class="col-md-9"><label class="form-label">Narration / Description</label><input
+                                type="text" class="form-control" placeholder="e.g., Owner's capital investment"></div>
+                    </div>
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-bordered" id="journal-table">
                             <thead class="table-light">
                                 <tr>
-                                    <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
+                                    <th style="width: 50%;">Account</th>
+                                    <th style="width: 20%;">Debit</th>
+                                    <th style="width: 20%;">Credit</th>
+                                    <th class="text-center" style="width: 10%;">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="journal-tbody"></tbody>
+                            <tfoot class="table-light">
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
+                                    <td class="text-end"><strong>Totals:</strong></td>
+                                    <td><input type="text" id="totalDebit"
+                                            class="form-control-plaintext fw-bold text-success" value="৳ 0.00" readonly>
+                                    </td>
+                                    <td><input type="text" id="totalCredit"
+                                            class="form-control-plaintext fw-bold text-danger" value="৳ 0.00" readonly>
+                                    </td>
+                                    <td>
+                                        <div id="balance-status" class="text-center"></div>
+                                    </td>
                                 </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
-                                </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                     </div>
+                    <button class="btn btn-primary btn-sm" id="addRowBtn"><i class="fa fa-plus me-1"></i> Add
+                        Account</button>
+                    <div class="text-end mt-4"><button class="btn btn-success" id="postEntryBtn" disabled><i
+                                class="fa fa-check-circle me-1"></i> Post Entry</button></div>
                 </div>
             </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => { const e = document.getElementById("addRowBtn"), t = document.getElementById("journal-tbody"), n = document.getElementById("postEntryBtn"), a = ["Cash", "Bank Account", "Accounts Receivable", "Inventory", "Office Equipment", "Accounts Payable", "Sales Revenue", "Rent Expense", "Owner's Capital"]; function d() { return a.map(e => `<option value="${e}">${e}</option>`).join("") } function l() { const e = document.createElement("tr"); e.innerHTML = `\n                    <td><select class="form-select account-select">${d()}</select></td>\n                    <td><input type="number" class="form-control debit-input" placeholder="0.00" min="0"></td>\n                    <td><input type="number" class="form-control credit-input" placeholder="0.00" min="0"></td>\n                    <td class="text-center"><button class="btn btn-sm btn-outline-danger remove-row-btn"><i class="fa fa-trash"></i></button></td>\n                `, t.appendChild(e) } function o() { let e = 0, a = 0; t.querySelectorAll("tr").forEach(t => { e += parseFloat(t.querySelector(".debit-input").value) || 0, a += parseFloat(t.querySelector(".credit-input").value) || 0 }), document.getElementById("totalDebit").value = `৳ ${e.toFixed(2)}`, document.getElementById("totalCredit").value = `৳ ${a.toFixed(2)}`; const d = document.getElementById("balance-status"); e === a && e > 0 ? (d.innerHTML = '<i class="fa fa-check-circle text-success" title="Balanced"></i>', n.disabled = !1) : (d.innerHTML = '<i class="fa fa-times-circle text-danger" title="Unbalanced"></i>', n.disabled = !0) } document.getElementById("journalDate").valueAsDate = new Date, e.addEventListener("click", l), t.addEventListener("click", e => { e.target.closest(".remove-row-btn") && (e.target.closest("tr").remove(), o()) }), t.addEventListener("input", e => { const t = e.target.closest("tr"); e.target.classList.contains("debit-input") && (t.querySelector(".credit-input").value = ""), e.target.classList.contains("credit-input") && (t.querySelector(".debit-input").value = ""), o() }), n.addEventListener("click", () => { alert("Journal entry posted successfully!"), location.reload() }), l(), l(), o() });
+    </script>
 </body>
 
 </html>
