--- a/purchase_list.html
+++ b/purchase_list.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Purchase List - Bondhon Enterprise</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Custom Styles (Same as Dashboard) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
-            background-color: #f8f9fa
+            background-color: #f8f9fa;
         }
 
         .sidebar {
@@ -21,10 +24,10 @@
             width: 250px;
             padding: 70px 0 0;
             background-color: #f8f9fa;
+            ;
             color: #212529;
             height: 100vh;
             overflow-y: auto;
-            border-right: 1px solid #dee2e6;
         }
 
         .sidebar .nav-link {
@@ -34,8 +37,8 @@
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
-            color: #0d6efd;
-            background-color: #e9ecef
+            color: #212529;
+            background-color: #e4e5e6
         }
 
         .sidebar .nav-link .fa {
@@ -50,51 +53,49 @@
 
         .main-content {
             margin-left: 250px;
-            padding: 90px 20px 20px;
+            padding: 20px;
+            padding-top: 70px;
         }
 
         .navbar {
-            z-index: 1030
+            z-index: 1030;
         }
 
         .navbar-brand {
-            font-weight: 700
+            font-weight: bold;
         }
 
-        .card {
-            border-radius: .375rem;
-        }
-
-        .stock-in {
-            color: #198754;
-        }
-
-        .stock-out {
+        .due-amount {
             color: #dc3545;
+            font-weight: 500
         }
     </style>
 </head>
 
 <body>
+
     <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
+            <!-- User Info and Logout Button -->
             <div class="ms-auto d-flex align-items-center">
-                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div>
-                <a href="index.html" class="btn btn-outline-light btn-sm"><i
-                        class="fa fa-sign-out-alt me-1"></i>Logout</a>
+                <div class="user-info me-3">
+                    <i class="fa fa-user-circle"></i> Admin
+                </div>
+                <a href="index.html" class="btn btn-outline-light btn-sm">
+                    <i class="fa fa-sign-out-alt me-1"></i>Logout
+                </a>
             </div>
         </div>
     </nav>
-
 
 
     <!-- Sidebar -->
 
     <div class="sidebar">
         <nav class="nav flex-column">
-            <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
+            <a class="nav-link" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
             <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
             <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
@@ -124,7 +125,7 @@
                 <nav class="nav flex-column">
                     <a class="nav-link nav-sub-link" href="purchase-dashboard.html">Purchase Dashboard</a>
                     <a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a>
-                    <a class="nav-link nav-sub-link" href="#">Purchase List</a>
+                    <a class="nav-link nav-sub-link active" href="purchase_list.html">Purchase List</a>
                 </nav>
             </div>
             <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true">
@@ -184,18 +185,20 @@
         </nav>
     </div>
 
-
     <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
+                <h1 class="h3">Purchase List</h1>
+                <a href="purchases-create.html" class="btn btn-primary"><i class="fa fa-plus me-1"></i> Record New
+                    Purchase</a>
             </div>
+
             <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
+                    <span>All Purchases</span>
+                    <input type="text" class="form-control form-control-sm w-50" id="purchaseSearchInput"
+                        placeholder="Search by Supplier, Ref #, or Status...">
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -203,50 +206,66 @@
                             <thead class="table-light">
                                 <tr>
                                     <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
+                                    <th>Ref #</th>
+                                    <th>Supplier</th>
+                                    <th class="text-end">Total Amount</th>
+                                    <th class="text-end">Paid</th>
+                                    <th class="text-end">Due</th>
+                                    <th class="text-center">Status</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="purchaseTableBody">
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
+                                    <td>23-Feb-2025</td>
+                                    <td>BILL-0154</td>
+                                    <td>Saleha Electronics</td>
+                                    <td class="text-end">৳ 131,008</td>
+                                    <td class="text-end">৳ 131,008</td>
+                                    <td class="text-end">৳ 0</td>
+                                    <td class="text-center"><span class="badge bg-success">Received</span></td>
+                                    <td>
+                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
+                                                class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                                class="fa fa-edit"></i></button>
+                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                                class="fa fa-trash"></i></button>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
+                                    <td>22-Feb-2025</td>
+                                    <td>CH-551</td>
+                                    <td>Bismillah Trade</td>
+                                    <td class="text-end">৳ 75,500</td>
+                                    <td class="text-end">৳ 50,000</td>
+                                    <td class="text-end due-amount">৳ 25,500</td>
+                                    <td class="text-center"><span class="badge bg-warning text-dark">Partial</span></td>
+                                    <td>
+                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
+                                                class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                                class="fa fa-edit"></i></button>
+                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                                class="fa fa-trash"></i></button>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
+                                    <td>21-Feb-2025</td>
+                                    <td></td>
+                                    <td>M/S, Mojumder Enterprise</td>
+                                    <td class="text-end">৳ 42,000</td>
+                                    <td class="text-end">৳ 0</td>
+                                    <td class="text-end due-amount">৳ 42,000</td>
+                                    <td class="text-center"><span class="badge bg-danger">Pending</span></td>
+                                    <td>
+                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
+                                                class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                                class="fa fa-edit"></i></button>
+                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                                class="fa fa-trash"></i></button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -255,7 +274,29 @@
             </div>
         </div>
     </main>
+
+    <!-- Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // --- Search Filter Logic ---
+            const searchInput = document.getElementById('purchaseSearchInput');
+            const tableBody = document.getElementById('purchaseTableBody');
+
+            searchInput.addEventListener('keyup', function () {
+                const filter = this.value.toUpperCase();
+                const rows = tableBody.getElementsByTagName('tr');
+                for (let row of rows) {
+                    if (row.textContent.toUpperCase().indexOf(filter) > -1) {
+                        row.style.display = "";
+                    } else {
+                        row.style.display = "none";
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
