--- a/trial-balance.html
+++ b/trial-balance.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Trial Balance - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
@@ -24,7 +26,6 @@
             color: #212529;
             height: 100vh;
             overflow-y: auto;
-            border-right: 1px solid #dee2e6;
         }
 
         .sidebar .nav-link {
@@ -34,8 +35,8 @@
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
-            color: #0d6efd;
-            background-color: #e9ecef
+            color: #212529;
+            background-color: #e4e5e6
         }
 
         .sidebar .nav-link .fa {
@@ -50,7 +51,8 @@
 
         .main-content {
             margin-left: 250px;
-            padding: 90px 20px 20px;
+            padding: 20px;
+            padding-top: 70px
         }
 
         .navbar {
@@ -60,30 +62,15 @@
         .navbar-brand {
             font-weight: 700
         }
-
-        .card {
-            border-radius: .375rem;
-        }
-
-        .stock-in {
-            color: #198754;
-        }
-
-        .stock-out {
-            color: #dc3545;
-        }
     </style>
 </head>
 
 <body>
-    <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
+        <div class="container-fluid"><a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
             <div class="ms-auto d-flex align-items-center">
-                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div>
-                <a href="index.html" class="btn btn-outline-light btn-sm"><i
-                        class="fa fa-sign-out-alt me-1"></i>Logout</a>
+                <div class="text-white me-3"><i class="fa fa-user-circle"></i> Admin</div><a href="index.html"
+                    class="btn btn-outline-light btn-sm"><i class="fa fa-sign-out-alt me-1"></i>Logout</a>
             </div>
         </div>
     </nav>
@@ -184,71 +171,39 @@
         </nav>
     </div>
 
-
-    <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
-            </div>
-            <div class="card animate__animated animate__fadeInUp">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
-                </div>
+            <h1 class="h3 mb-4">Trial Balance</h1>
+            <div class="card mb-4">
                 <div class="card-body">
+                    <div class="row g-3 align-items-end">
+                        <div class="col-md-3"><label class="form-label">As of Date</label><input type="date"
+                                class="form-control" id="asOfDate"></div>
+                        <div class="col-md-2"><button class="btn btn-primary w-100" id="generateBtn">Generate</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="report-header">Trial Balance Report</div>
+                <div class="card-body p-0">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-striped mb-0">
                             <thead class="table-light">
                                 <tr>
-                                    <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
+                                    <th>Account</th>
+                                    <th class="text-end">Debit (৳)</th>
+                                    <th class="text-end">Credit (৳)</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="report-tbody"></tbody>
+                            <tfoot class="table-dark">
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
+                                    <th class="text-end">Total:</th>
+                                    <th class="text-end" id="totalDebit"></th>
+                                    <th class="text-end" id="totalCredit"></th>
                                 </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
-                                </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                     </div>
                 </div>
@@ -256,6 +211,9 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById("asOfDate").valueAsDate = new Date, document.getElementById("generateBtn").addEventListener("click", () => { const e = [{ account: "Cash", debit: 4785e3, credit: 0 }, { account: "Accounts Receivable", debit: 3231e3, credit: 0 }, { account: "Inventory", debit: 255e5, credit: 0 }, { account: "Bank Account", debit: 2e5, credit: 0 }, { account: "Accounts Payable", debit: 0, credit: 18e5 }, { account: "Sales Revenue", debit: 0, credit: 118e5 }, { account: "Owner's Capital", debit: 0, credit: 2e7 }, { account: "Rent Expense", debit: 19e3, credit: 0 }, { account: "Profit Distribution", debit: 2e4, credit: 0 }], t = document.getElementById("report-tbody"); t.innerHTML = ""; let n = 0, a = 0; e.forEach(e => { t.innerHTML += `<tr><td>${e.account}</td><td class="text-end">${e.debit > 0 ? e.debit.toLocaleString() : ""}</td><td class="text-end">${e.credit > 0 ? e.credit.toLocaleString() : ""}</td></tr>`, n += e.debit, a += e.credit }), document.getElementById("totalDebit").textContent = n.toLocaleString(), document.getElementById("totalCredit").textContent = a.toLocaleString() });
+    </script>
 </body>
 
 </html>
