--- a/voucher-list.html
+++ b/voucher-list.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ledger - Bondhon Enterprise</title>
+    <title>Voucher List - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
-            background-color: #f8f9fa
+            background-color: #f8f9fa;
         }
 
         .sidebar {
@@ -29,19 +29,19 @@
 
         .sidebar .nav-link {
             color: #212529;
-            padding: 10px 20px
+            padding: 10px 20px;
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #0d6efd;
-            background-color: #e9ecef
+            background-color: #e9ecef;
         }
 
         .sidebar .nav-link .fa {
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 10px;
         }
 
         .nav-sub-link {
@@ -54,23 +54,20 @@
         }
 
         .navbar {
-            z-index: 1030
+            z-index: 1030;
         }
 
         .navbar-brand {
-            font-weight: 700
+            font-weight: 700;
         }
 
         .card {
             border-radius: .375rem;
         }
 
-        .stock-in {
-            color: #198754;
-        }
-
-        .stock-out {
-            color: #dc3545;
+        .badge {
+            font-size: 0.85em;
+            font-weight: 500;
         }
     </style>
 </head>
@@ -87,7 +84,6 @@
             </div>
         </div>
     </nav>
-
 
 
     <!-- Sidebar -->
@@ -184,18 +180,18 @@
         </nav>
     </div>
 
-
     <!-- Main Content -->
     <main class="main-content">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Stock Ledger</h1>
+                <h1 class="h3">Voucher Management</h1>
+                <a href="voucher_form.html" class="btn btn-primary"><i class="fa fa-plus me-1"></i> Add New Voucher</a>
             </div>
             <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Detailed Stock Transactions</span>
-                    <input type="text" class="form-control form-control-sm w-50"
-                        placeholder="Filter by Product, Type, or Details...">
+                    <span>All Vouchers</span>
+                    <input type="text" class="form-control form-control-sm w-50" id="voucherSearchInput"
+                        placeholder="Search by Voucher #, Type, or Details...">
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -203,50 +199,58 @@
                             <thead class="table-light">
                                 <tr>
                                     <th>Date</th>
-                                    <th>Product / Item</th>
-                                    <th>Transaction Type</th>
+                                    <th>Voucher #</th>
+                                    <th>Type</th>
                                     <th>Details</th>
-                                    <th class="text-end">Stock In</th>
-                                    <th class="text-end">Stock Out</th>
-                                    <th class="text-end">Balance</th>
+                                    <th class="text-end">Amount</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="voucherTableBody">
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>WFC-3F5-GDEL-XX</td>
-                                    <td>Purchase</td>
-                                    <td>From Saleha Electronics</td>
-                                    <td class="text-end stock-in fw-bold">+20</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">150</td>
+                                    <td>25-Feb-2025</td>
+                                    <td>PV-00125</td>
+                                    <td><span class="badge bg-primary">Payment</span></td>
+                                    <td>Office Rent - January</td>
+                                    <td class="text-end">৳ 15,000</td>
+                                    <td>
+                                        <a href="voucher_view.html" class="btn btn-sm btn-outline-secondary"
+                                            title="View"><i class="fa fa-eye"></i></a>
+                                        <a href="voucher_form.html" class="btn btn-sm btn-outline-primary"
+                                            title="Edit"><i class="fa fa-edit"></i></a>
+                                        <button class="btn btn-sm btn-outline-info" title="Print"><i
+                                                class="fa fa-print"></i></button>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>23-Feb-25</td>
-                                    <td>VISION Refrigerator</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">45</td>
+                                    <td>24-Feb-2025</td>
+                                    <td>RV-00210</td>
+                                    <td><span class="badge bg-success">Receipt</span></td>
+                                    <td>Advance from Md. Jafar</td>
+                                    <td class="text-end">৳ 10,000</td>
+                                    <td>
+                                        <a href="voucher_view.html" class="btn btn-sm btn-outline-secondary"
+                                            title="View"><i class="fa fa-eye"></i></a>
+                                        <a href="voucher_form.html" class="btn btn-sm btn-outline-primary"
+                                            title="Edit"><i class="fa fa-edit"></i></a>
+                                        <button class="btn btn-sm btn-outline-info" title="Print"><i
+                                                class="fa fa-print"></i></button>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>ARAFAT Fan</td>
-                                    <td>Purchase</td>
-                                    <td>From Arafat & Co.</td>
-                                    <td class="text-end stock-in fw-bold">+50</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end">210</td>
-                                </tr>
-                                <tr>
-                                    <td>22-Feb-25</td>
-                                    <td>WALTON 32" TV</td>
-                                    <td>Sale</td>
-                                    <td>Invoice #5374 - Customer</td>
-                                    <td class="text-end"></td>
-                                    <td class="text-end stock-out fw-bold">-1</td>
-                                    <td class="text-end">88</td>
+                                    <td>24-Feb-2025</td>
+                                    <td>JV-00034</td>
+                                    <td><span class="badge bg-warning text-dark">Journal</span></td>
+                                    <td>Depreciation on Office Equipment</td>
+                                    <td class="text-end">৳ 5,500</td>
+                                    <td>
+                                        <a href="voucher_view.html" class="btn btn-sm btn-outline-secondary"
+                                            title="View"><i class="fa fa-eye"></i></a>
+                                        <a href="voucher_form.html" class="btn btn-sm btn-outline-primary"
+                                            title="Edit"><i class="fa fa-edit"></i></a>
+                                        <button class="btn btn-sm btn-outline-info" title="Print"><i
+                                                class="fa fa-print"></i></button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -255,7 +259,17 @@
             </div>
         </div>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById('voucherSearchInput')?.addEventListener('keyup', function () {
+            const filter = this.value.toUpperCase();
+            const rows = document.getElementById('voucherTableBody').getElementsByTagName('tr');
+            for (let row of rows) {
+                row.style.display = row.textContent.toUpperCase().indexOf(filter) > -1 ? "" : "none";
+            }
+        });
+    </script>
 </body>
 
 </html>
