--- a/account-dashboard.html
+++ b/account-dashboard.html
@@ -171,7 +171,7 @@
                 <nav class="nav flex-column">
                     <a class="nav-link nav-sub-link" href="purchase-dashboard.html">Purchase Dashboard</a>
                     <a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a>
-                    <a class="nav-link nav-sub-link" href="#">Purchase List</a>
+                    <a class="nav-link nav-sub-link" href="purchase_list.html">Purchase List</a>
                 </nav>
             </div>
             <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true">
