--- a/purchase_list.html
+++ b/purchase_list.html
@@ -24,7 +24,6 @@
             width: 250px;
             padding: 70px 0 0;
             background-color: #f8f9fa;
-            ;
             color: #212529;
             height: 100vh;
             overflow-y: auto;
@@ -80,7 +79,7 @@
             <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
             <!-- User Info and Logout Button -->
             <div class="ms-auto d-flex align-items-center">
-                <div class="user-info me-3">
+                <div class="text-white me-3">
                     <i class="fa fa-user-circle"></i> Admin
                 </div>
                 <a href="index.html" class="btn btn-outline-light btn-sm">
@@ -91,11 +90,9 @@
     </nav>
 
 
-    <!-- Sidebar -->
-
     <div class="sidebar">
         <nav class="nav flex-column">
-            <a class="nav-link" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
+            <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
             <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
             <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
@@ -125,7 +122,7 @@
                 <nav class="nav flex-column">
                     <a class="nav-link nav-sub-link" href="purchase-dashboard.html">Purchase Dashboard</a>
                     <a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a>
-                    <a class="nav-link nav-sub-link active" href="purchase_list.html">Purchase List</a>
+                    <a class="nav-link nav-sub-link" href="purchase_list.html">Purchase List</a>
                 </nav>
             </div>
             <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true">
@@ -216,54 +213,62 @@
                                 </tr>
                             </thead>
                             <tbody id="purchaseTableBody">
-                                <tr>
+                                <!-- Data Rows will be manipulated by JS -->
+                                <tr data-id="1">
                                     <td>23-Feb-2025</td>
-                                    <td>BILL-0154</td>
-                                    <td>Saleha Electronics</td>
-                                    <td class="text-end">৳ 131,008</td>
-                                    <td class="text-end">৳ 131,008</td>
-                                    <td class="text-end">৳ 0</td>
-                                    <td class="text-center"><span class="badge bg-success">Received</span></td>
+                                    <td class="ref-no">BILL-0154</td>
+                                    <td class="supplier">Saleha Electronics</td>
+                                    <td class="text-end total-amount">131008</td>
+                                    <td class="text-end paid-amount">131008</td>
+                                    <td class="text-end due-amount">0</td>
+                                    <td class="text-center status-cell"><span class="badge bg-success">Received</span>
+                                    </td>
                                     <td>
-                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
-                                                class="fa fa-eye"></i></button>
-                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                        <button class="btn btn-sm btn-outline-secondary view-btn"
+                                            title="View Details"><i class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary edit-btn" title="Edit"><i
                                                 class="fa fa-edit"></i></button>
-                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                        <button class="btn btn-sm btn-outline-danger delete-btn" title="Delete"><i
                                                 class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr data-id="2">
                                     <td>22-Feb-2025</td>
-                                    <td>CH-551</td>
-                                    <td>Bismillah Trade</td>
-                                    <td class="text-end">৳ 75,500</td>
-                                    <td class="text-end">৳ 50,000</td>
-                                    <td class="text-end due-amount">৳ 25,500</td>
-                                    <td class="text-center"><span class="badge bg-warning text-dark">Partial</span></td>
+                                    <td class="ref-no">CH-551</td>
+                                    <td class="supplier">Bismillah Trade</td>
+                                    <td class="text-end total-amount">75500</td>
+                                    <td class="text-end paid-amount">50000</td>
+                                    <td class="text-end due-amount">25500</td>
+                                    <td class="text-center status-cell"><span
+                                            class="badge bg-warning text-dark">Partial</span></td>
                                     <td>
-                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
-                                                class="fa fa-eye"></i></button>
-                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                        <button class="btn btn-sm btn-outline-secondary view-btn"
+                                            title="View Details"><i class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-success payment-btn"
+                                            title="Add Payment"><i class="fa fa-hand-holding-dollar"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary edit-btn" title="Edit"><i
                                                 class="fa fa-edit"></i></button>
-                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                        <button class="btn btn-sm btn-outline-danger delete-btn" title="Delete"><i
                                                 class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr data-id="3">
                                     <td>21-Feb-2025</td>
-                                    <td></td>
-                                    <td>M/S, Mojumder Enterprise</td>
-                                    <td class="text-end">৳ 42,000</td>
-                                    <td class="text-end">৳ 0</td>
-                                    <td class="text-end due-amount">৳ 42,000</td>
-                                    <td class="text-center"><span class="badge bg-danger">Pending</span></td>
+                                    <td class="ref-no">N/A</td>
+                                    <td class="supplier">M/S, Mojumder Enterprise</td>
+                                    <td class="text-end total-amount">42000</td>
+                                    <td class="text-end paid-amount">0</td>
+                                    <td class="text-end due-amount">42000</td>
+                                    <td class="text-center status-cell"><span class="badge bg-danger">Pending</span>
+                                    </td>
                                     <td>
-                                        <button class="btn btn-sm btn-outline-secondary" title="View Details"><i
-                                                class="fa fa-eye"></i></button>
-                                        <button class="btn btn-sm btn-outline-primary" title="Edit"><i
+                                        <button class="btn btn-sm btn-outline-secondary view-btn"
+                                            title="View Details"><i class="fa fa-eye"></i></button>
+                                        <button class="btn btn-sm btn-outline-success payment-btn"
+                                            title="Add Payment"><i class="fa fa-hand-holding-dollar"></i></button>
+                                        <button class="btn btn-sm btn-outline-primary edit-btn" title="Edit"><i
                                                 class="fa fa-edit"></i></button>
-                                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i
+                                        <button class="btn btn-sm btn-outline-danger delete-btn" title="Delete"><i
                                                 class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
@@ -275,25 +280,170 @@
         </div>
     </main>
 
+    <!-- View Purchase Modal -->
+    <div class="modal fade" id="viewPurchaseModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="viewModalTitle">Purchase Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Supplier:</strong> <span id="modalSupplier"></span></p>
+                    <p><strong>Date:</strong> <span id="modalDate"></span></p>
+                    <p><strong>Reference #:</strong> <span id="modalRef"></span></p>
+                    <hr>
+                    <p><strong>Total Amount:</strong> <span id="modalTotal"></span></p>
+                    <p><strong>Amount Paid:</strong> <span id="modalPaid"></span></p>
+                    <p><strong>Amount Due:</strong> <span id="modalDue" class="fw-bold"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Payment Modal -->
+    <div class="modal fade" id="paymentModal" tabindex="-1">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add Payment</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="paymentAmount" class="form-label">Payment Amount</label>
+                        <input type="number" class="form-control" id="paymentAmount" placeholder="e.g. 5000">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success" id="savePaymentBtn">Save Payment</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // --- Search Filter Logic ---
             const searchInput = document.getElementById('purchaseSearchInput');
             const tableBody = document.getElementById('purchaseTableBody');
+            const viewModal = new bootstrap.Modal(document.getElementById('viewPurchaseModal'));
+            const paymentModal = new bootstrap.Modal(document.getElementById('paymentModal'));
+            let activeRow = null;
 
+            // --- Currency Formatter ---
+            const formatCurrency = (value) => `৳ ${parseFloat(value).toLocaleString('en-IN', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
+
+            // --- Format initial values in the table ---
+            tableBody.querySelectorAll('tr').forEach(row => {
+                const total = row.querySelector('.total-amount');
+                const paid = row.querySelector('.paid-amount');
+                const due = row.querySelector('.due-amount');
+                const dueAmountValue = parseFloat(due.textContent);
+
+                total.textContent = formatCurrency(total.textContent);
+                paid.textContent = formatCurrency(paid.textContent);
+                due.textContent = formatCurrency(due.textContent);
+
+                if (dueAmountValue > 0) {
+                    due.classList.add('due-amount');
+                }
+            });
+
+
+            // --- Search Filter Logic ---
             searchInput.addEventListener('keyup', function () {
                 const filter = this.value.toUpperCase();
                 const rows = tableBody.getElementsByTagName('tr');
                 for (let row of rows) {
-                    if (row.textContent.toUpperCase().indexOf(filter) > -1) {
-                        row.style.display = "";
-                    } else {
-                        row.style.display = "none";
+                    row.style.display = row.textContent.toUpperCase().indexOf(filter) > -1 ? "" : "none";
+                }
+            });
+
+            // --- Event Delegation for all buttons ---
+            tableBody.addEventListener('click', function (e) {
+                const button = e.target.closest('button');
+                if (!button) return;
+
+                activeRow = button.closest('tr');
+
+                // View Button
+                if (button.classList.contains('view-btn')) {
+                    const cells = activeRow.cells;
+                    document.getElementById('viewModalTitle').textContent = `Purchase Details: ${activeRow.querySelector('.ref-no').textContent}`;
+                    document.getElementById('modalDate').textContent = cells[0].textContent;
+                    document.getElementById('modalRef').textContent = cells[1].textContent;
+                    document.getElementById('modalSupplier').textContent = cells[2].textContent;
+                    document.getElementById('modalTotal').textContent = activeRow.querySelector('.total-amount').textContent;
+                    document.getElementById('modalPaid').textContent = activeRow.querySelector('.paid-amount').textContent;
+                    document.getElementById('modalDue').textContent = activeRow.querySelector('.due-amount').textContent;
+                    viewModal.show();
+                }
+
+                // Edit Button
+                if (button.classList.contains('edit-btn')) {
+                    const refNumber = activeRow.querySelector('.ref-no').textContent;
+                    alert(`Redirecting to edit page for purchase: ${refNumber}`);
+                    window.location.href = `purchases-create.html?id=${refNumber}`;
+                }
+
+                // Delete Button
+                if (button.classList.contains('delete-btn')) {
+                    if (confirm('Are you sure you want to delete this purchase record?')) {
+                        activeRow.remove();
                     }
                 }
+
+                // Payment Button
+                if (button.classList.contains('payment-btn')) {
+                    document.getElementById('paymentAmount').value = '';
+                    paymentModal.show();
+                }
+            });
+
+            // --- Save Payment Logic ---
+            document.getElementById('savePaymentBtn').addEventListener('click', function () {
+                const paymentAmountInput = document.getElementById('paymentAmount');
+                const paymentValue = parseFloat(paymentAmountInput.value) || 0;
+
+                if (paymentValue <= 0) {
+                    alert('Please enter a valid payment amount.');
+                    return;
+                }
+
+                const totalCell = activeRow.querySelector('.total-amount');
+                const paidCell = activeRow.querySelector('.paid-amount');
+                const dueCell = activeRow.querySelector('.due-amount');
+                const statusCell = activeRow.querySelector('.status-cell');
+
+                // Note: We need to parse the currency string to get a number
+                const currentPaid = parseFloat(paidCell.textContent.replace(/[৳,]/g, ''));
+                const totalAmount = parseFloat(totalCell.textContent.replace(/[৳,]/g, ''));
+
+                const newPaid = currentPaid + paymentValue;
+                const newDue = totalAmount - newPaid;
+
+                paidCell.textContent = formatCurrency(newPaid);
+                dueCell.textContent = formatCurrency(newDue);
+
+                // Update status badge
+                if (newDue <= 0) {
+                    statusCell.innerHTML = '<span class="badge bg-success">Received</span>';
+                    dueCell.classList.remove('due-amount');
+                    activeRow.querySelector('.payment-btn')?.remove(); // Remove payment button if fully paid
+                } else if (newDue < totalAmount) {
+                    statusCell.innerHTML = '<span class="badge bg-warning text-dark">Partial</span>';
+                    dueCell.classList.add('due-amount');
+                }
+
+                paymentModal.hide();
             });
         });
     </script>
