--- a/settings.html
+++ b/settings.html
@@ -244,6 +244,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -284,6 +286,7 @@
         >
       </nav>
     </div>
+
 
     <!-- Main Content -->
     <main class="main-content">
