--- a/all-create.html
+++ b/all-create.html
@@ -274,6 +274,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -314,6 +316,7 @@
         >
       </nav>
     </div>
+
 
     <!-- MAIN CONTENT AREA -->
     <main class="main-content">
