--- a/chartofaccount.html
+++ b/chartofaccount.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Balance Sheet - Bondhon Enterprise</title>
+    <title>Chart of Accounts - Bondhon Enterprise</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,14 +11,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <style>
       body {
@@ -36,6 +28,7 @@
         color: #212529;
         height: 100vh;
         overflow-y: auto;
+        border-right: 1px solid #dee2e6;
       }
 
       .sidebar .nav-link {
@@ -45,8 +38,8 @@
 
       .sidebar .nav-link:hover,
       .sidebar .nav-link.active {
-        color: #212529;
-        background-color: #e4e5e6;
+        color: #0d6efd;
+        background-color: #e9ecef;
       }
 
       .sidebar .nav-link .fa {
@@ -61,8 +54,7 @@
 
       .main-content {
         margin-left: 250px;
-        padding: 20px;
-        padding-top: 70px;
+        padding: 90px 20px 20px;
       }
 
       .navbar {
@@ -72,19 +64,15 @@
       .navbar-brand {
         font-weight: 700;
       }
-      /* Custom styles for Balance Sheet */
-      .category-header {
-        font-weight: bold;
-        background-color: #f0f0f0;
-      }
-      .total-row th {
-        border-top: 2px solid #000 !important;
-        font-weight: bold;
+
+      .card {
+        border-radius: 0.375rem;
       }
     </style>
   </head>
 
   <body>
+    <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
@@ -290,177 +278,164 @@
       </nav>
     </div>
 
-
+    <!-- Main Content -->
     <main class="main-content">
       <div class="container-fluid">
-        <h1 class="h3 mb-4">Balance Sheet</h1>
-        <div class="card mb-4">
-          <div class="card-body">
-            <div class="row g-3 align-items-end">
-              <div class="col-md-3">
-                <label for="asOfDate" class="form-label">As of Date</label>
-                <input type="date" class="form-control" id="asOfDate" />
-              </div>
-              <div class="col-md-2">
-                <button class="btn btn-primary w-100" id="generateBtn">
-                  Generate
-                </button>
-              </div>
-            </div>
+        <div
+          class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+        >
+          <h1 class="h2">Chart of Accounts</h1>
+          <div class="btn-toolbar mb-2 mb-md-0">
+            <button
+              type="button"
+              class="btn btn-sm btn-outline-secondary"
+              data-bs-toggle="modal"
+              data-bs-target="#addLedgerModal"
+            >
+              <i class="fa fa-plus-circle me-1"></i>
+              Add New Ledger
+            </button>
           </div>
         </div>
+
         <div class="card">
-          <div class="card-header" id="report-header">Balance Sheet</div>
           <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-sm">
+              <table class="table table-striped table-sm">
                 <thead>
                   <tr>
-                    <th style="width: 50%">Assets</th>
-                    <th class="text-end" style="width: 25%">Amount (৳)</th>
-                    <th style="width: 25%"></th>
+                    <th>Account Code</th>
+                    <th>Account Name</th>
+                    <th>Account Type</th>
+                    <th>Actions</th>
                   </tr>
                 </thead>
-                <tbody id="assets-tbody">
-                  <!-- Asset rows will be injected here -->
-                </tbody>
-                <tfoot>
-                  <tr class="table-dark">
-                    <th>Total Assets</th>
-                    <th class="text-end" id="totalAssets"></th>
-                    <th></th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-            <hr class="my-4" />
-            <div class="table-responsive">
-              <table class="table table-sm">
-                <thead>
+                <tbody>
+                  <!-- Example Row 1 -->
                   <tr>
-                    <th style="width: 50%">Liabilities & Equity</th>
-                    <th class="text-end" style="width: 25%">Amount (৳)</th>
-                    <th style="width: 25%"></th>
+                    <td>1010</td>
+                    <td>Cash on Hand</td>
+                    <td>Assets</td>
+                    <td>
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="fa fa-edit"></i>
+                      </button>
+                      <button class="btn btn-sm btn-outline-danger">
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
                   </tr>
-                </thead>
-                <tbody id="liabilities-equity-tbody">
-                  <!-- Liabilities and Equity rows will be injected here -->
+                  <!-- Example Row 2 -->
+                  <tr>
+                    <td>1020</td>
+                    <td>Accounts Receivable</td>
+                    <td>Assets</td>
+                    <td>
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="fa fa-edit"></i>
+                      </button>
+                      <button class="btn btn-sm btn-outline-danger">
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                  <!-- Example Row 3 -->
+                  <tr>
+                    <td>2010</td>
+                    <td>Accounts Payable</td>
+                    <td>Liabilities</td>
+                    <td>
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="fa fa-edit"></i>
+                      </button>
+                      <button class="btn btn-sm btn-outline-danger">
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                  <!-- Add more rows as needed -->
                 </tbody>
-                <tfoot>
-                  <tr class="table-dark">
-                    <th>Total Liabilities & Equity</th>
-                    <th class="text-end" id="totalLiabilitiesEquity"></th>
-                    <th></th>
-                  </tr>
-                </tfoot>
               </table>
             </div>
           </div>
         </div>
       </div>
     </main>
+
+    <!-- Add Ledger Modal -->
+    <div
+      class="modal fade"
+      id="addLedgerModal"
+      tabindex="-1"
+      aria-labelledby="addLedgerModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addLedgerModalLabel">Add New Ledger</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="addLedgerForm">
+              <div class="mb-3">
+                <label for="accountCode" class="form-label"
+                  >Account Code*</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="accountCode"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="accountName" class="form-label"
+                  >Account Name*</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="accountName"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="accountType" class="form-label"
+                  >Account Type*</label
+                >
+                <select class="form-select" id="accountType" required>
+                  <option value="">Choose...</option>
+                  <option value="Assets">Assets</option>
+                  <option value="Liabilities">Liabilities</option>
+                  <option value="Equity">Equity</option>
+                  <option value="Revenue">Revenue</option>
+                  <option value="Expenses">Expenses</option>
+                </select>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" id="saveLedgerButton">
+              Save Ledger
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Set the default date to today
-      document.getElementById("asOfDate").valueAsDate = new Date();
-
-      document.getElementById("generateBtn").addEventListener("click", () => {
-        // --- Sample Data ---
-        // In a real application, you would fetch and calculate this data
-        const assets = {
-          current: [
-            { account: "Cash", amount: 4785000 },
-            { account: "Accounts Receivable", amount: 3231000 },
-            { account: "Inventory", amount: 25500000 },
-            { account: "Bank Account", amount: 200000 },
-          ],
-          nonCurrent: [
-            { account: "Furniture & Fixtures", amount: 1500000 },
-            { account: "Vehicles", amount: 2500000 },
-          ],
-        };
-
-        const liabilities = {
-          current: [
-            { account: "Accounts Payable", amount: 1800000 },
-            { account: "Short-term Loans", amount: 500000 },
-          ],
-          nonCurrent: [{ account: "Long-term Bank Loan", amount: 4000000 }],
-        };
-
-        const equity = [
-          { account: "Owner's Capital", amount: 20155000 },
-          { account: "Retained Earnings", amount: 11261000 }, // This makes the sheet balance
-        ];
-
-        const assetsTbody = document.getElementById("assets-tbody");
-        const liabilitiesEquityTbody = document.getElementById(
-          "liabilities-equity-tbody"
-        );
-        const asOfDate = document.getElementById("asOfDate").value;
-
-        // Clear previous report data
-        assetsTbody.innerHTML = "";
-        liabilitiesEquityTbody.innerHTML = "";
-
-        // Update report header
-        document.getElementById(
-          "report-header"
-        ).textContent = `Balance Sheet as of ${asOfDate || "Today"}`;
-
-        // --- Populate Assets ---
-        let totalAssets = 0;
-        assetsTbody.innerHTML += `<tr class="category-header"><td colspan="3">Current Assets</td></tr>`;
-        assets.current.forEach((item) => {
-          assetsTbody.innerHTML += `<tr><td>${
-            item.account
-          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
-          totalAssets += item.amount;
-        });
-
-        assetsTbody.innerHTML += `<tr class="category-header"><td colspan="3">Non-Current Assets</td></tr>`;
-        assets.nonCurrent.forEach((item) => {
-          assetsTbody.innerHTML += `<tr><td>${
-            item.account
-          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
-          totalAssets += item.amount;
-        });
-
-        // --- Populate Liabilities & Equity ---
-        let totalLiabilitiesEquity = 0;
-
-        // Liabilities
-        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Current Liabilities</td></tr>`;
-        liabilities.current.forEach((item) => {
-          liabilitiesEquityTbody.innerHTML += `<tr><td>${
-            item.account
-          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
-          totalLiabilitiesEquity += item.amount;
-        });
-
-        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Non-Current Liabilities</td></tr>`;
-        liabilities.nonCurrent.forEach((item) => {
-          liabilitiesEquityTbody.innerHTML += `<tr><td>${
-            item.account
-          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
-          totalLiabilitiesEquity += item.amount;
-        });
-
-        // Equity
-        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Owner's Equity</td></tr>`;
-        equity.forEach((item) => {
-          liabilitiesEquityTbody.innerHTML += `<tr><td>${
-            item.account
-          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
-          totalLiabilitiesEquity += item.amount;
-        });
-
-        // --- Display Totals ---
-        document.getElementById("totalAssets").textContent =
-          totalAssets.toLocaleString();
-        document.getElementById("totalLiabilitiesEquity").textContent =
-          totalLiabilitiesEquity.toLocaleString();
-      });
-    </script>
   </body>
 </html>
