--- a/customer-ledger.html
+++ b/customer-ledger.html
@@ -252,6 +252,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -292,6 +294,7 @@
         >
       </nav>
     </div>
+
 
     <main class="main-content">
       <div class="container-fluid">
