--- a/dashboard.html
+++ b/dashboard.html
@@ -413,6 +413,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -453,6 +455,7 @@
         >
       </nav>
     </div>
+
 
     <!-- MAIN CONTENT (ENHANCED) -->
     <main class="main-content">
