--- a/purchase_list.html
+++ b/purchase_list.html
@@ -212,6 +212,28 @@
             >
           </nav>
         </div>
+        <!-- New Collection Links -->
+        <a
+          class="nav-link"
+          data-bs-toggle="collapse"
+          href="#collectionsCollapse"
+          role="button"
+          aria-expanded="true"
+          ><i class="fa fa-hand-holding-dollar fa-fw"></i> Collections
+          <i class="fa fa-chevron-down fa-xs float-end mt-1"></i
+        ></a>
+        <div class="collapse show" id="collectionsCollapse">
+          <nav class="nav flex-column">
+            <a class="nav-link nav-sub-link" href="emi-collection.html"
+              >EMI Collection</a
+            ><a class="nav-link nav-sub-link" href="due-collection.html"
+              >Due Collection</a
+            ><a class="nav-link nav-sub-link" href="customer-ledger.html"
+              >Customer Ledger</a
+            >
+          </nav>
+        </div>
+
         <a
           class="nav-link"
           data-bs-toggle="collapse"
@@ -225,6 +247,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -236,6 +260,7 @@
             >
           </nav>
         </div>
+
         <a
           class="nav-link"
           data-bs-toggle="collapse"
