--- a/reports-customer-dues.html
+++ b/reports-customer-dues.html
@@ -95,7 +95,7 @@
       </div>
     </nav>
 
-    <!-- Sidebar -->
+   <!-- Sidebar -->
 
     <div class="sidebar">
       <nav class="nav flex-column">
@@ -243,6 +243,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -283,6 +285,7 @@
         >
       </nav>
     </div>
+
 
     <!-- Main Content -->
     <main class="main-content">
