--- a/sales-dashboard.html
+++ b/sales-dashboard.html
@@ -258,6 +258,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -298,6 +300,7 @@
         >
       </nav>
     </div>
+
 
     <!-- Main Content -->
     <main class="main-content">
