--- a/sales-manage-invoices.html
+++ b/sales-manage-invoices.html
@@ -88,7 +88,7 @@
       </div>
     </nav>
 
-    <!-- Sidebar -->
+   <!-- Sidebar -->
 
     <div class="sidebar">
       <nav class="nav flex-column">
@@ -236,6 +236,8 @@
           <nav class="nav flex-column">
             <a class="nav-link nav-sub-link" href="account-dashboard.html"
               >Accounts Dashboard</a
+            ><a class="nav-link nav-sub-link" href="chartofaccount.html"
+              >Chart of Account</a
             ><a class="nav-link nav-sub-link" href="voucher_form.html"
               >Voucher Entry</a
             ><a class="nav-link nav-sub-link" href="voucher-list.html"
@@ -276,6 +278,7 @@
         >
       </nav>
     </div>
+
 
     <main class="main-content">
       <div class="container-fluid">
